checkpoint in progress towards more flexibility with MacroMaker Supervisor; Improved scripts for spack and AL9 environment

--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -5,6 +5,7 @@ SOURCE MacroMakerSupervisor.cc version.cc
 		 PRIVATE
 		 artdaq::DAQdata
 		 otsdaq::CodeEditor
+		 otsdaq::NetworkUtilities
 )
 
 install_headers()
