Fix CMake for MPD build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,9 +72,8 @@ endif()
 find_package(otsdaq 2.06.06 REQUIRED EXPORT)
 
  # XDAQ Extra setup
- include_directories($ENV{XDAQ_INC}/linux $ENV{XDAQ_INC})
-link_directories($ENV{XDAQ_LIB})
-link_directories($ENV{ARTDAQ_DATABASE_LIB})
+ include_directories($ENV{XDAQ_ROOT}/include/linux $ENV{XDAQ_ROOT}/include)
+link_directories($ENV{XDAQ_ROOT}/lib)
  set(XDAQ_BASIC_LIB_LIST 
    xcept
    xoap
