--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ project(otsdaq_utilities VERSION 2.08.02)
 
 include(CetCMakeEnv)
 cet_cmake_env()
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL Clang AND
      CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 14.0.0)
