Checkpoint - improved tooltips, minor look and feel fixes, stable handling of multiple ots instances through Desktop Icons; Console improvements with anchors and custom triggers. Subsystem Launcher is stable for monitoring, but not control yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,9 +139,9 @@ else()
 	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.in.js ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js @ONLY)
 endif()
 
-	FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
-	INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in" EXCLUDE)
-	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
+FILE(COPY WebGUI DESTINATION . PATTERN "*.in.js" EXCLUDE)
+INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in.js" EXCLUDE)
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
 
 
 message("otsdaq_utilities WebGUI created Debug.js at ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js}")
